# FaultyAPI

./: PKG-INFO  README.md  orders.csv  orders_async.csv  pyproject.toml
src/orders_server/: cli.py  client_async.py  client_threads.py  main.py  models.py
